Parent and Inactive flow
1. Parent and student login based on OTP
2. Nettyfish service connection
3. Inactive user Get flow
4. Inactive to active edit flow
5. Secondary User Id long to string